syntax = "proto3";
package nl.svsticky.chroma;

message Photo {
  string id = 1;
  string albumId = 2;
  int64 createdAt = 3;
  bytes photoData = 4;
}

enum PhotoResponseType {
  URL = 0;
  InResponse = 1;
}

message PhotoRespone {
  oneof response {
    string url = 1;
    Photo photo = 2;
  }
}